--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,17 @@
+alembic==1.18.3
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+asyncpg==0.31.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
 fastapi==0.128.0
+greenlet==3.3.1
 h11==0.16.0
 idna==3.11
+Mako==1.3.10
+MarkupSafe==3.0.3
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
