Updated .env.example to reflect that postgres connection uses async driver

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ POSTGRES_USER=appuser
 POSTGRES_PASSWORD=supersecret
 POSTGRES_DB=appdb
 
-DATABASE_URL=postgresql://appuser:supersecret@db:5432/appdb
+DATABASE_URL=postgresql+asyncpg://appuser:supersecret@db:5432/appdb
