--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,8 @@ click==8.3.1
 fastapi==0.128.0
 greenlet==3.3.1
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
