--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.18.3
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+APScheduler==3.11.2
 asyncpg==0.31.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
@@ -22,5 +23,6 @@ SQLAlchemy==2.0.46
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzlocal==5.3.1
 urllib3==2.6.3
 uvicorn==0.40.0
