--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,10 +15,14 @@ httpx==0.28.1
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
+numpy==2.4.2
+pandas==3.0.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 requests==2.32.5
+six==1.17.0
 SQLAlchemy==2.0.46
 starlette==0.50.0
 typing-inspection==0.4.2
